add: add swagger comment for quiz management
